# 29003A

./: CMakeLists.txt  build.sh  需求.md
algo/JZCoordTrans/: readme.txt
algo/JZCoordTrans/include/: targetlocation.h
algo/JZMOTCTracker/: demo.cpp  readme.txt
algo/JZMOTCTracker/include/: JZMotCTracker.h
algo/JZRKInference/: readme.txt  readme_classifiy.txt  rk3588_test.cpp
algo/JZRKInference/include/: base_detector.h  common.h  rk3588_detector.h  rk3588classifier.h
algo/JZSingleObjTracker/: demo.cpp  readme.txt
algo/JZSingleObjTracker/include/: JZSoTracker.h
comtest/include/: test_comm_ffm.h  test_mod_vpss.h
comtest/src/: test_comm_argparse.cpp  test_comm_bmp.cpp  test_comm_ffm.cpp  test_comm_imgproc.cpp  test_comm_rgn.cpp  test_comm_sys.cpp  test_comm_utils.cpp  test_comm_venc.cpp  test_comm_vpss.cpp  test_mod_vpss.cpp
config/: Config.ini  user_config.json
dma_handle/include/: debug.h  video_io.h  xvideo_api.h
dma_handle/src/: debug.c  video_io.cpp  xvideo_api.c
media_process/include/: cvxFont.h  osd_process.h  rkmodel_build.h  thread_process.h  video_osd.h  vpss_engine.h
media_process/src/: cvxFont.cpp  osd_process.cpp  rkmodel_build.cpp  thread_process.cpp  video_osd.cpp  vpss_engine.cpp
protocol/include/: protocol_board_abc.h  protocol_common.h  protocol_env.h  protocol_ir.h  protocol_jgzm.h  protocol_picxk.h  protocol_power.h  protocol_sf.h  protocol_vi.h
protocol/src/: protocol_board_abc.cpp  protocol_common.cpp  protocol_env.cpp  protocol_ir.cpp  protocol_jgzm.cpp  protocol_power.cpp  protocol_sf.cpp  protocol_vi.cpp
usr_app/: main.cpp
usr_app/include/: ai_engine.h  geographic_track.h  self_check.h  target_engine.h  vectoring.h  xkMsg.h
usr_app/src/: ai_engine.cpp  geographic_track.cpp  self_check.cpp  target_engine.cpp  xkMsg.cpp
utils/include/: ConfigManager.h  charEncode.h  isocket.h  mylog.hpp  serial.h  serialport.h  uartextend.h  user_ko.h  xuart_api.h
utils/src/: ConfigManager.cpp  isocket.cpp  mylog.cpp  serial.c  serialport.cpp  uartextend.c  xuart_api.c
